<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="start_result">Let\'s Play!</string>
    <string name="wins_label">WINS</string>
    <string name="wins_label_player">Player:</string>
    <string name="wins_label_ai">Computer:</string>
    <string name="label_rock">Rock</string>
    <string name="label_paper">Paper</string>
    <string name="label_scissors">Scissors</string>
    <string name="label_lizard">Lizard</string>
    <string name="label_spock">Spock</string>
    <string name="result_draw">Draw!</string>
    <string name="result_win">You win!</string>
    <string name="result_lose">You lose!</string>
    <string name="title_activity_classic">Classic Mode</string>
    <string name="title_activity_spock">Lizard-Spock Mode</string>
</resources>
